fixed some mistake;

--- a/nginx.conf
+++ b/nginx.conf
@@ -42,7 +42,7 @@
 		proxy_pass https://$subdomain.wikipedia.org;
 		proxy_buffering off;
 
-		proxy_redirect https://$subdomain.wikipedia.org/ http://$subdomain.wiki.yourdomain.com;/;
+		proxy_redirect https://$subdomain.wikipedia.org/ http://$subdomain.wiki.yourdomain.com/;
 		proxy_cookie_domain $subdomain.wikipedia.org $subdomain.wiki.yourdomain.com;
 
 		proxy_set_header X-Real_IP $remote_addr;
@@ -53,6 +53,7 @@
 		subs_filter_types text/css text/xml text/javascript;
         subs_filter .wikipedia.org .wiki.yourdomain.com;
         subs_filter //wikipedia.org //wiki.yourdomain.com;
+		subs_filter 'https://([^.]+).wiki' 'http://$1.wiki' igr; 
 		subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
 	  }
 	}
@@ -77,6 +78,7 @@
 		subs_filter_types text/css text/xml text/javascript;
         subs_filter .wikipedia.org .wiki.yourdomain.com;
         subs_filter //wikipedia.org //wiki.yourdomain.com;
+		subs_filter 'https://([^.]+).m.wiki' 'http://$1.m.wiki' igr; 
 		subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
 	  }
 	}
