修正在手机开启时会跳转回官方wiki问题

--- a/nginx.conf
+++ b/nginx.conf
@@ -43,6 +43,7 @@
 		proxy_buffering off;
 
 		proxy_redirect https://$subdomain.wikipedia.org/ http://$subdomain.wiki.yourdomain.com/;
+        proxy_redirect https://$subdomain.wikipedia.org/ https://m.$subdomain.wiki.yourdomain.com/;
 		proxy_cookie_domain $subdomain.wikipedia.org $subdomain.wiki.yourdomain.com;
 
 		proxy_set_header X-Real_IP $remote_addr;
