修正全语言首页搜索框ajax请求返回网址仍然对应到原网址

--- a/nginx.conf
+++ b/nginx.conf
@@ -28,7 +28,7 @@
             proxy_set_header Accept-Encoding '';
             proxy_set_header referer "https://$proxy_host$request_uri";
 
-            subs_filter_types text/css text/xml text/javascript;
+            subs_filter_types text/css text/xml text/javascript application/javascript application/json;
             subs_filter .wikipedia.org .wiki.yourdomain.com;
             subs_filter //wikipedia.org //wiki.yourdomain.com;
             subs_filter upload.wikimedia.org up.w.yourdomain.com;
@@ -51,7 +51,7 @@
 		proxy_set_header Accept-Encoding ''; 
 		proxy_set_header referer "https://$proxy_host$request_uri";
 
-		subs_filter_types text/css text/xml text/javascript;
+		subs_filter_types text/css text/xml text/javascript application/javascript application/json;
         subs_filter .wikipedia.org .wiki.yourdomain.com;
         subs_filter //wikipedia.org //wiki.yourdomain.com;
 		subs_filter 'https://([^.]+).wiki' 'http://$1.wiki' igr; 
@@ -76,7 +76,7 @@
 		proxy_set_header Accept-Encoding ''; 
 		proxy_set_header referer "https://$proxy_host$request_uri";
 
-		subs_filter_types text/css text/xml text/javascript;
+		subs_filter_types text/css text/css text/xml text/javascript application/javascript application/json;
         subs_filter .wikipedia.org .wiki.yourdomain.com;
         subs_filter //wikipedia.org //wiki.yourdomain.com;
 		subs_filter 'https://([^.]+).m.wiki' 'http://$1.m.wiki' igr; 
