修正一处域名替换错误

--- a/nginx.conf
+++ b/nginx.conf
@@ -31,7 +31,7 @@
             subs_filter_types text/css text/xml text/javascript application/javascript application/json;
             subs_filter .wikipedia.org .wiki.yourdomain.com;
             subs_filter //wikipedia.org //wiki.yourdomain.com;
-            subs_filter upload.wikimedia.org up.w.yourdomain.com;
+            subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
         }
     }
     server {
