調整格式，修正首頁搜索 302 重定向到原網站 Bug。

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,12 +3,12 @@
         listen 80;
 
         location / {
-        proxy_pass https://upload.wikimedia.org;
-        proxy_cookie_domain upload.wikimedia.org up.wiki.yourdomain.com;
-        proxy_buffering off;
-        proxy_set_header X-Real_IP $remote_addr;
-        proxy_set_header User-Agent $http_user_agent;
-        proxy_set_header referer "https://upload.wikimedia.org$request_uri";
+        	proxy_pass https://upload.wikimedia.org;
+        	proxy_cookie_domain upload.wikimedia.org up.wiki.yourdomain.com;
+        	proxy_buffering off;
+        	proxy_set_header X-Real_IP $remote_addr;
+       	 	proxy_set_header User-Agent $http_user_agent;
+        	proxy_set_header referer "https://upload.wikimedia.org$request_uri";
         }
     }
 
@@ -17,21 +17,22 @@
         listen 80;
         resolver 8.8.8.8;
         location / {
-            proxy_pass https://www.wikipedia.org;
-            proxy_buffering off;
+        	proxy_pass https://www.wikipedia.org;
+            	proxy_buffering off;
 
-            proxy_redirect https://www.wikipedia.org/ http://wiki.yourdomain.com/;
-            proxy_cookie_domain www.wikipedia.org wiki.yourdomain.com;
+            	proxy_redirect https://www.wikipedia.org/ http://wiki.yourdomain.com/;
+           	proxy_cookie_domain www.wikipedia.org wiki.yourdomain.com;
+	    	proxy_redirect ~^https://([\w\.]+).wikipedia.org/(.*?)$ http://$1.wiki.sxisa.org/$2;
 
-            proxy_set_header X-Real_IP $remote_addr;
-            proxy_set_header User-Agent $http_user_agent;
-            proxy_set_header Accept-Encoding '';
-            proxy_set_header referer "https://$proxy_host$request_uri";
+            	proxy_set_header X-Real_IP $remote_addr;
+            	proxy_set_header User-Agent $http_user_agent;
+            	proxy_set_header Accept-Encoding '';
+            	proxy_set_header referer "https://$proxy_host$request_uri";
 
-            subs_filter_types text/css text/xml text/javascript application/javascript application/json;
-            subs_filter .wikipedia.org .wiki.yourdomain.com;
-            subs_filter //wikipedia.org //wiki.yourdomain.com;
-            subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
+            	subs_filter_types text/css text/xml text/javascript application/javascript application/json;
+            	subs_filter .wikipedia.org .wiki.yourdomain.com;
+            	subs_filter //wikipedia.org //wiki.yourdomain.com;
+            	subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
         }
     }
     server {
@@ -43,8 +44,9 @@
 		proxy_buffering off;
 
 		proxy_redirect https://$subdomain.wikipedia.org/ http://$subdomain.wiki.yourdomain.com/;
-        proxy_redirect https://$subdomain.m.wikipedia.org/ http://$subdomain.m.wiki.yourdomain.com/;
+        	proxy_redirect https://$subdomain.m.wikipedia.org/ http://$subdomain.m.wiki.yourdomain.com/;
 		proxy_cookie_domain $subdomain.wikipedia.org $subdomain.wiki.yourdomain.com;
+		proxy_redirect ~^https://([\w\.]+).wikipedia.org/(.*?)$ http://$1.wiki.sxisa.org/$2;
 
 		proxy_set_header X-Real_IP $remote_addr;
 		proxy_set_header User-Agent $http_user_agent;
@@ -52,8 +54,8 @@
 		proxy_set_header referer "https://$proxy_host$request_uri";
 
 		subs_filter_types text/css text/xml text/javascript application/javascript application/json;
-        subs_filter .wikipedia.org .wiki.yourdomain.com;
-        subs_filter //wikipedia.org //wiki.yourdomain.com;
+        	subs_filter .wikipedia.org .wiki.yourdomain.com;
+        	subs_filter //wikipedia.org //wiki.yourdomain.com;
 		subs_filter 'https://([^.]+).wiki' 'http://$1.wiki' igr; 
 		subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
 	  }
@@ -77,8 +79,8 @@
 		proxy_set_header referer "https://$proxy_host$request_uri";
 
 		subs_filter_types text/css text/css text/xml text/javascript application/javascript application/json;
-        subs_filter .wikipedia.org .wiki.yourdomain.com;
-        subs_filter //wikipedia.org //wiki.yourdomain.com;
+        	subs_filter .wikipedia.org .wiki.yourdomain.com;
+        	subs_filter //wikipedia.org //wiki.yourdomain.com;
 		subs_filter 'https://([^.]+).m.wiki' 'http://$1.m.wiki' igr; 
 		subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
 	  }
