--- a/nginx.conf
+++ b/nginx.conf
@@ -78,7 +78,7 @@
 		proxy_set_header Accept-Encoding ''; 
 		proxy_set_header referer "https://$proxy_host$request_uri";
 
-		subs_filter_types text/css text/css text/xml text/javascript application/javascript application/json;
+		subs_filter_types text/css text/xml text/javascript application/javascript application/json;
         	subs_filter .wikipedia.org .wiki.yourdomain.com;
         	subs_filter //wikipedia.org //wiki.yourdomain.com;
 		subs_filter 'https://([^.]+).m.wiki' 'http://$1.m.wiki' igr; 
