Update wikipedia / wikimedia domains

--- a/nginx_ssl.conf
+++ b/nginx_ssl.conf
@@ -12,12 +12,12 @@ server {
     }
 
     location / {
-        proxy_pass https://upload.wikimedia.com;
-        proxy_cookie_domain upload.wikimedia.com up.wiki.yourdomain.com;
+        proxy_pass https://upload.wikimedia.org;
+        proxy_cookie_domain upload.wikimedia.org up.wiki.yourdomain.com;
         proxy_buffering off;
         proxy_set_header X-Real_IP $remote_addr;
         proxy_set_header User-Agent $http_user_agent;
-        proxy_set_header referer "https://upload.wikimedia.com$request_uri";
+        proxy_set_header referer "https://upload.wikimedia.org$request_uri";
     }
 }
 
@@ -35,12 +35,12 @@ server {
     }
 
     location / {
-        proxy_pass https://www.wikipedia.com;
+        proxy_pass https://www.wikipedia.org;
         proxy_buffering off;
 
-        proxy_redirect https://www.wikipedia.com/ http://wiki.yourdomain.com/;
-        proxy_cookie_domain www.wikipedia.com wiki.yourdomain.com;
-        proxy_redirect ~^https://([\w\.]+).wikipedia.com/(.*?)$ http://$1.wiki.yourdomain.com/$2;
+        proxy_redirect https://www.wikipedia.org/ http://wiki.yourdomain.com/;
+        proxy_cookie_domain www.wikipedia.org wiki.yourdomain.com;
+        proxy_redirect ~^https://([\w\.]+).wikipedia.org/(.*?)$ http://$1.wiki.yourdomain.com/$2;
 
         proxy_set_header X-Real_IP $remote_addr;
         proxy_set_header User-Agent $http_user_agent;
@@ -48,9 +48,9 @@ server {
         proxy_set_header referer "https://$proxy_host$request_uri";
 
         subs_filter_types text/css text/xml text/javascript application/javascript application/json;
-        subs_filter .wikipedia.com .wiki.yourdomain.com;
-        subs_filter //wikipedia.com //wiki.yourdomain.com;
-        subs_filter upload.wikimedia.com up.wiki.yourdomain.com;
+        subs_filter .wikipedia.org .wiki.yourdomain.com;
+        subs_filter //wikipedia.org //wiki.yourdomain.com;
+        subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
     }
 }
 
@@ -68,13 +68,13 @@ server {
     }
 
     location / {
-        proxy_pass https://$subdomain.wikipedia.com;
+        proxy_pass https://$subdomain.wikipedia.org;
         proxy_buffering off;
 
-        proxy_redirect https://$subdomain.wikipedia.com/ http://$subdomain.wiki.yourdomain.com/;
-        proxy_redirect https://$subdomain.m.wikipedia.com/ http://$subdomain.m.wiki.yourdomain.com/;
-        proxy_cookie_domain $subdomain.wikipedia.com $subdomain.wiki.yourdomain.com;
-        proxy_redirect ~^https://([\w\.]+).wikipedia.com/(.*?)$ http://$1.wiki.yourdomain.com/$2;
+        proxy_redirect https://$subdomain.wikipedia.org/ http://$subdomain.wiki.yourdomain.com/;
+        proxy_redirect https://$subdomain.m.wikipedia.org/ http://$subdomain.m.wiki.yourdomain.com/;
+        proxy_cookie_domain $subdomain.wikipedia.org $subdomain.wiki.yourdomain.com;
+        proxy_redirect ~^https://([\w\.]+).wikipedia.org/(.*?)$ http://$1.wiki.yourdomain.com/$2;
 
         proxy_set_header X-Real_IP $remote_addr;
         proxy_set_header User-Agent $http_user_agent;
@@ -82,10 +82,10 @@ server {
         proxy_set_header referer "https://$proxy_host$request_uri";
 
         subs_filter_types text/css text/xml text/javascript application/javascript application/json;
-        subs_filter .wikipedia.com .wiki.yourdomain.com;
-        subs_filter //wikipedia.com //wiki.yourdomain.com;
+        subs_filter .wikipedia.org .wiki.yourdomain.com;
+        subs_filter //wikipedia.org //wiki.yourdomain.com;
         subs_filter 'https://([^.]+).wiki' 'http://$1.wiki' igr; 
-        subs_filter upload.wikimedia.com up.wiki.yourdomain.com;
+        subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
     }
 }
 
@@ -103,11 +103,11 @@ server {
     }
 
     location / {
-        proxy_pass https://$subdomain.m.wikipedia.com;
+        proxy_pass https://$subdomain.m.wikipedia.org;
         proxy_buffering off;
 
-        proxy_redirect https://$subdomain.m.wikipedia.com/ http://$subdomain.m.wiki.yourdomain.com/;
-        proxy_cookie_domain $subdomain.m.wikipedia.com $subdomain.m.wiki.yourdomain.com;
+        proxy_redirect https://$subdomain.m.wikipedia.org/ http://$subdomain.m.wiki.yourdomain.com/;
+        proxy_cookie_domain $subdomain.m.wikipedia.org $subdomain.m.wiki.yourdomain.com;
 
         proxy_set_header X-Real_IP $remote_addr;
         proxy_set_header User-Agent $http_user_agent;
@@ -115,9 +115,9 @@ server {
         proxy_set_header referer "https://$proxy_host$request_uri";
 
         subs_filter_types text/css text/xml text/javascript application/javascript application/json;
-        subs_filter .wikipedia.com .wiki.yourdomain.com;
-        subs_filter //wikipedia.com //wiki.yourdomain.com;
+        subs_filter .wikipedia.org .wiki.yourdomain.com;
+        subs_filter //wikipedia.org //wiki.yourdomain.com;
         subs_filter 'https://([^.]+).m.wiki' 'http://$1.m.wiki' igr; 
-        subs_filter upload.wikimedia.com up.wiki.yourdomain.com;
+        subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
     }
 }
