Replace subs_filter with sub_filter

--- a/nginx_ssl.conf
+++ b/nginx_ssl.conf
@@ -47,10 +47,10 @@ server {
         proxy_set_header Accept-Encoding '';
         proxy_set_header referer "https://$proxy_host$request_uri";
 
-        subs_filter_types text/css text/xml text/javascript application/javascript application/json;
-        subs_filter .wikipedia.org .wiki.yourdomain.com;
-        subs_filter //wikipedia.org //wiki.yourdomain.com;
-        subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
+        sub_filter_types text/css text/xml text/javascript application/javascript application/json;
+        sub_filter .wikipedia.org .wiki.yourdomain.com;
+        sub_filter //wikipedia.org //wiki.yourdomain.com;
+        sub_filter upload.wikimedia.org up.wiki.yourdomain.com;
     }
 }
 
@@ -81,11 +81,11 @@ server {
         proxy_set_header Accept-Encoding ''; 
         proxy_set_header referer "https://$proxy_host$request_uri";
 
-        subs_filter_types text/css text/xml text/javascript application/javascript application/json;
-        subs_filter .wikipedia.org .wiki.yourdomain.com;
-        subs_filter //wikipedia.org //wiki.yourdomain.com;
-        subs_filter 'https://([^.]+).wiki' 'http://$1.wiki' igr; 
-        subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
+        sub_filter_types text/css text/xml text/javascript application/javascript application/json;
+        sub_filter .wikipedia.org .wiki.yourdomain.com;
+        sub_filter //wikipedia.org //wiki.yourdomain.com;
+        sub_filter 'https://([^.]+).wiki' 'http://$1.wiki' igr; 
+        sub_filter upload.wikimedia.org up.wiki.yourdomain.com;
     }
 }
 
@@ -114,10 +114,10 @@ server {
         proxy_set_header Accept-Encoding ''; 
         proxy_set_header referer "https://$proxy_host$request_uri";
 
-        subs_filter_types text/css text/xml text/javascript application/javascript application/json;
-        subs_filter .wikipedia.org .wiki.yourdomain.com;
-        subs_filter //wikipedia.org //wiki.yourdomain.com;
-        subs_filter 'https://([^.]+).m.wiki' 'http://$1.m.wiki' igr; 
-        subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
+        sub_filter_types text/css text/xml text/javascript application/javascript application/json;
+        sub_filter .wikipedia.org .wiki.yourdomain.com;
+        sub_filter //wikipedia.org //wiki.yourdomain.com;
+        sub_filter 'https://([^.]+).m.wiki' 'http://$1.m.wiki' igr; 
+        sub_filter upload.wikimedia.org up.wiki.yourdomain.com;
     }
 }
