--- a/nginx.conf
+++ b/nginx.conf
@@ -29,10 +29,10 @@
             	proxy_set_header Accept-Encoding '';
             	proxy_set_header referer "https://$proxy_host$request_uri";
 
-            	subs_filter_types text/css text/xml text/javascript application/javascript application/json;
-            	subs_filter .wikipedia.org .wiki.yourdomain.com;
-            	subs_filter //wikipedia.org //wiki.yourdomain.com;
-            	subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
+            	sub_filter_types text/css text/xml text/javascript application/javascript application/json;
+            	sub_filter .wikipedia.org .wiki.yourdomain.com;
+            	sub_filter //wikipedia.org //wiki.yourdomain.com;
+            	sub_filter upload.wikimedia.org up.wiki.yourdomain.com;
         }
     }
     server {
@@ -53,11 +53,11 @@
 		proxy_set_header Accept-Encoding ''; 
 		proxy_set_header referer "https://$proxy_host$request_uri";
 
-		subs_filter_types text/css text/xml text/javascript application/javascript application/json;
-        	subs_filter .wikipedia.org .wiki.yourdomain.com;
-        	subs_filter //wikipedia.org //wiki.yourdomain.com;
-		subs_filter 'https://([^.]+).wiki' 'http://$1.wiki' igr; 
-		subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
+		sub_filter_types text/css text/xml text/javascript application/javascript application/json;
+        	sub_filter .wikipedia.org .wiki.yourdomain.com;
+        	sub_filter //wikipedia.org //wiki.yourdomain.com;
+		sub_filter 'https://([^.]+).wiki' 'http://$1.wiki' igr; 
+		sub_filter upload.wikimedia.org up.wiki.yourdomain.com;
 	  }
 	}
 
@@ -78,10 +78,10 @@
 		proxy_set_header Accept-Encoding ''; 
 		proxy_set_header referer "https://$proxy_host$request_uri";
 
-		subs_filter_types text/css text/xml text/javascript application/javascript application/json;
-        	subs_filter .wikipedia.org .wiki.yourdomain.com;
-        	subs_filter //wikipedia.org //wiki.yourdomain.com;
-		subs_filter 'https://([^.]+).m.wiki' 'http://$1.m.wiki' igr; 
-		subs_filter upload.wikimedia.org up.wiki.yourdomain.com;
+		sub_filter_types text/css text/xml text/javascript application/javascript application/json;
+        	sub_filter .wikipedia.org .wiki.yourdomain.com;
+        	sub_filter //wikipedia.org //wiki.yourdomain.com;
+		sub_filter 'https://([^.]+).m.wiki' 'http://$1.m.wiki' igr; 
+		sub_filter upload.wikimedia.org up.wiki.yourdomain.com;
 	  }
 	}
